KQED -/src/objects/WGBH_AUAC__c.object
<CustomObject>
    <description>List of accounting units with activity codes (General Ledge codes)</description>
    <fields>
        <fullName>AUAC__c</fullName>
        <description>Combination of the accounting unit and activity which makes the record unique</description>
        <externalId>true</externalId>
        <label>AUAC</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Accounting_Unit__c</fullName>
        <description>The Accounting Unit</description>
        <label>Accounting Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of AU AC Combo</description>
        <label>Description</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Teh date the AU AC Combo ceases to be active</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date the AU AC Combo becomes active</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WGBH_Accounting_Unit__c</fullName>
        <label>WGBH Accounting Unit</label>
        <referenceTo>WGBH_Accounting_Unit__c</referenceTo>
        <relationshipLabel>WGBH AUAC&apos;s</relationshipLabel>
        <relationshipName>WGBH_AUAC_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WGBH AUAC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Accounting_Unit__c</columns>
        <columns>Activity__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>WGBH_Accounting_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WGBH AUAC Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IT00000005BR3MAM_00NT0000001IOfGMAW</fullName>
        <active>true</active>
        <errorMessage>This Activity Code is not related to the selected Accounting Unit.</errorMessage>
        <field>Position__c.Activity_Code__c</field>
        <filterItems>
            <field>WGBH_AUAC__c.WGBH_Accounting_Unit__c</field>
            <operation>equals</operation>
            <valueField>$Source.WGBH_Accounting_Unit__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Job Requisition_Activity Code</name>
        <sourceObject>Position__c</sourceObject>
    </namedFilters>
    <pluralLabel>WGBH AUAC&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>